--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ repo_url: https://github.com/jimporter/mettle/
 
 pages:
 - [index.md, Home]
+- [install.md, Installation]
 - [running-tests.md, User Guide, Running Tests]
 - [writing-tests.md, User Guide, Writing Tests]
 - [matchers.md, User Guide, Expectations and Matchers]
