--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ markdown_extensions:
 pages:
 - [index.md, Home]
 - [install.md, Installation]
+- [tutorial.md, User Guide, Tutorial]
 - [running-tests.md, User Guide, Running Tests]
 - [writing-tests.md, User Guide, Writing Tests]
 - [matchers.md, User Guide, Expectations and Matchers]
