--- a/test/.gitignore
+++ b/test/.gitignore
@@ -8,6 +8,7 @@ test_make_suite
 test_matchers
 test_move_if
 test_output
+test_run_tests
 test_suite_execution
 test_tuple_algorithm
 posix/test_scoped_pipe
