Reorganize expectation/matcher docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ pages:
 - [tutorial.md, User Guide, Tutorial]
 - [running-tests.md, User Guide, Running Tests]
 - [writing-tests.md, User Guide, Writing Tests]
-- [matchers.md, User Guide, Expectations and Matchers]
+- [expectations.md, User Guide, Expectations]
+- [built-in-matchers.md, User Guide, Built-in Matchers]
+- [writing-matchers.md, User Guide, Writing Your Own Matchers]
 - [developer.md, Developer Guide]
 - [license.md, License]
