--- a/test/.gitignore
+++ b/test/.gitignore
@@ -9,6 +9,7 @@ test_forward_if
 test_global_suite
 test_make_suite
 test_matchers
+test_match_result
 test_output
 test_run_tests
 test_string_algorithm
