--- a/test/.gitignore
+++ b/test/.gitignore
@@ -14,6 +14,7 @@ test_output
 test_run_tests
 test_string_algorithm
 test_suite_execution
+test_test_file
 test_tuple_algorithm
 posix/test_scoped_pipe
 posix/test_scoped_signal
