--- a/test/.gitignore
+++ b/test/.gitignore
@@ -10,6 +10,7 @@ test_global_suite
 test_make_suite
 test_matchers
 test_match_result
+test_object_factory
 test_output
 test_run_tests
 test_string_algorithm
