Restructure test files
Now things are in subdirectories based on what they test!

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,30 +1,30 @@
-test_any_capture
-test_attributes
-test_cmd_line
-test_compiled_suite
-test_expect
-test_factory
-test_filters
 test_forward_if
-test_global_suite
-test_make_suite
-test_matchers
-test_match_result
-test_object_factory
-test_run_tests
 test_string_algorithm
-test_string_output
-test_suite_execution
-test_test_caller
-test_test_file
-test_to_printable
 test_tuple_algorithm
-test_type_name
-log/test_brief
-log/test_child_pipe
-log/test_indent
-log/test_verbose
+driver/test_cmd_line
+driver/test_filters
+driver/test_indent
+driver/test_object_factory
+driver/test_run_tests
+driver/test_test_file
+driver/log/test_brief
+driver/log/test_child_pipe
+driver/log/test_verbose
 posix/test_scoped_pipe
 posix/test_scoped_signal
 posix/test_subprocess
 posix/test_subprocess_test_runner
+output/test_string_output
+output/test_to_printable
+output/test_type_name
+suite/test_attributes
+suite/test_compiled_suite
+suite/test_factory
+suite/test_global_suite
+suite/test_make_suite
+suite/test_suite_execution
+suite/test_test_caller
+matchers/test_any_capture
+matchers/test_expect
+matchers/test_matchers
+matchers/test_match_result
