--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,13 +11,14 @@ markdown_extensions:
 - attr_list
 
 pages:
-- [index.md, Home]
-- [install.md, Installation]
-- [tutorial.md, User Guide, Tutorial]
-- [running-tests.md, User Guide, Running Tests]
-- [writing-tests.md, User Guide, Writing Tests]
-- [expectations.md, User Guide, Expectations]
-- [built-in-matchers.md, User Guide, Built-in Matchers]
-- [writing-matchers.md, User Guide, Writing Your Own Matchers]
-- [developer.md, Developer Guide]
-- [license.md, License]
+- Home: index.md
+- Installation: install.md
+- User Guide:
+  - Tutorial: tutorial.md
+  - Running Tests: running-tests.md
+  - Writing Tests: writing-tests.md
+  - Expectations: expectations.md
+  - Built-in Matchers: built-in-matchers.md
+  - Writing Your Own Matchers: writing-matchers.md
+- Developer Guide: developer.md
+- License: license.md
