--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 matrix:
   include:
     - compiler: clang
-      env: COMPILER=clang++-3.6 BACKEND=make
+      env: COMPILER=clang++-3.6 BACKEND=make EXTRAFLAGS=-DMETTLE_NO_STDLIB_EXTS
       addons: &clang-36
         apt:
           sources: &sources
@@ -21,10 +21,10 @@ matrix:
             - ninja-build
             - python-virtualenv
     - compiler: clang
-      env: COMPILER=clang++-3.6 BACKEND=ninja
+      env: COMPILER=clang++-3.6 BACKEND=ninja EXTRAFLAGS=-DMETTLE_NO_STDLIB_EXTS
       addons: *clang-36
     - compiler: clang
-      env: COMPILER=clang++-3.7 BACKEND=make
+      env: COMPILER=clang++-3.7 BACKEND=make EXTRAFLAGS=-DMETTLE_NO_STDLIB_EXTS
       addons: &clang-37
         apt:
           sources: *sources
@@ -37,8 +37,14 @@ matrix:
             - ninja-build
             - python-virtualenv
     - compiler: clang
-      env: COMPILER=clang++-3.7 BACKEND=ninja
+      env: COMPILER=clang++-3.7 BACKEND=ninja EXTRAFLAGS=-DMETTLE_NO_STDLIB_EXTS
       addons: *clang-37
+    - os: osx
+      osx_image: xcode7.2
+      env: COMPILER=clang++ BACKEND=ninja
+    - os: osx
+      osx_image: xcode7.2
+      env: COMPILER=clang++ BACKEND=ninja EXTRAFLAGS=-DMETTLE_NO_STDLIB_EXTS
 
 cache:
   apt: true
@@ -46,6 +52,13 @@ cache:
     - env
 
 install:
+  - |
+    if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
+      brew update
+      brew install python
+      brew install ninja
+      pip install virtualenv
+    fi
   - 'if [ ! -f "env/bin/activate" ]; then virtualenv env; fi'
   - source env/bin/activate
   - pip install -U bfg9000
@@ -53,6 +66,6 @@ install:
   - export CPATH=`pwd`/bencode.hpp/include
 script:
   - |
-    CXX=${COMPILER} CXXFLAGS="-Wall -Wextra -pedantic -DMETTLE_NO_STDLIB_EXTS" bfg9000 build --backend=ninja
+    CXX=${COMPILER} CXXFLAGS="-Wall -Wextra -pedantic ${EXTRAFLAGS}" bfg9000 build --backend=${BACKEND}
     cd build
-    ninja test
+    ${BACKEND} test
