Treat all warnings as errors when building under MSVC

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ install:
   - git clone https://github.com/jimporter/bencode.hpp.git
   - copy bencode.hpp\include\bencode.hpp include\bencode.hpp
 test_script:
+  - set CPPFLAGS=/WX
   - bfg9000 build --backend=ninja
   - cd build
   - ninja test
