--- a/.travis.yml
+++ b/.travis.yml
@@ -48,20 +48,17 @@ matrix:
 
 cache:
   apt: true
-  directories:
-    - env
 
 install:
   - |
     if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       brew update
-      brew install python
       brew install ninja
-      pip install virtualenv
+      brew install python
+    else
+      virtualenv env && source env/bin/activate
     fi
-  - 'if [ ! -f "env/bin/activate" ]; then virtualenv env; fi'
-  - source env/bin/activate
-  - pip install -U bfg9000
+  - pip install bfg9000
   - git clone https://github.com/jimporter/bencode.hpp.git
   - export CPATH=`pwd`/bencode.hpp/include
 script:
