--- a/.travis.yml
+++ b/.travis.yml
@@ -103,7 +103,7 @@ matrix:
 cache:
   apt: true
 
-install:
+before_install:
   - |
     if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       brew update
@@ -113,8 +113,11 @@ install:
       # bfg9000, and so is grumpy about not having lxml.
       pip install lxml
     else
+      set -e
       virtualenv env && source env/bin/activate
+      pip install -U setuptools
     fi
+install:
   - pip install bfg9000
   - git clone https://github.com/jimporter/bencode.hpp.git
   - export CPATH=`pwd`/bencode.hpp/include
