--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,27 @@
 build: false
 version: "{branch}-{build}"
 
-environment:
-  BOOST_INCLUDEDIR: C:\Libraries\boost_1_59_0
-  BOOST_LIBRARYDIR: C:\Libraries\boost_1_59_0\lib32-msvc-14.0
-  PYTHON: C:\Python27
+image:
+  - Visual Studio 2015
 
-  matrix:
-    - VS: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat
-      BOOST_INCLUDEDIR: C:\Libraries\boost_1_59_0
-      BOOST_LIBRARYDIR: C:\Libraries\boost_1_59_0\lib32-msvc-14.0
+environment:
+  VS: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat
+  BOOST_INCLUDEDIR: C:\Libraries\boost_1_67_0
+  BOOST_LIBRARYDIR: C:\Libraries\boost_1_67_0\lib32-msvc-14.0
+  PYTHON_PATH: C:\Python27
+
+cache:
+  - C:\ProgramData\chocolatey\bin -> appveyor.yml
+  - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 install:
+  - cinst ninja
   - call "%VS%" x86
   - cl.exe
-  - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
+  - set PATH=%PYTHON_PATH%;%PYTHON_PATH%\Scripts;%PATH%
   - pip install bfg9000
-  - cinst ninja
-  - python scripts\vendorize_bencode.py
 test_script:
   - set CPPFLAGS=/WX
-  - 9k build --backend=ninja
+  - 9k build --vendorize --backend=ninja
   - cd build
   - ninja test
