--- a/.travis.yml
+++ b/.travis.yml
@@ -149,7 +149,7 @@ matrix:
       install:
         - |
           export BOOST_ROOT=$HOME
-          wget -O boost_1_58_0.tar.bz2 https://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.bz2/download
+          wget https://downloads.sourceforge.net/project/boost/boost/1.58.0/boost_1_58_0.tar.bz2
           tar -xjf boost_1_58_0.tar.bz2
           pushd boost_1_58_0
           ./bootstrap.sh --prefix=$HOME --with-libraries=program_options,iostreams
